Correct spacing on logged in button at medium screen size

--- a/dependent-css/user.css
+++ b/dependent-css/user.css
@@ -62,7 +62,7 @@
 	}
 
 	@media (--gnav-m) {
-		padding: 12px *;
+		padding: 10px *;
 	}
 }
 
